# python-learning

./: .djlintrc  .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ruff.yml  semantic-pull-request.yml  stale.yml  test.yml  validate.yml
coverage/: lcov.info
src/beach/: __init__.py  __main__.py  beach_volley.py
src/beach/assets/: beach-2023.txt  beach-2023.xlsx
src/dummy/: __init__.py  lib.py
src/exercices/: _10_classes_objects.py  _11_dictionaries.py  _12_modules_packages.py  _13_numpy_arrays.py  _14_pandas_basics.py  _15_generators.py  _16_list_comprehensions.py  _17_lambda_functions.py  _18_function_arguments.py  _19_regular_expressions.py  _1_hello_world.py  _20_exception_handling.py  _21_sets.py  _22_serialization.py  _23_partial_functions.py  _24_code_introspection.py  _25_closures.py  _26_decorators.py  _27_map_filter_reduce.py  _2_variables_types.py  _3_lists.py  _4_basic_operators.py  _5_string_formatting.py  _6_basic_string_operations.py  _6_string_operations.py  _7_conditions.py  _8_loops.py  _9_functions.py
src/mysql/: __init__.py  __main__.py  database.py  error.py  logger.py  queries.py  query.py  record.py  table.py
src/pydjango/: __init__.py  manage.py
src/pydjango/pydjango/: asgi.py  settings.py  urls.py  wsgi.py
src/pydjango/pymysql/: __init__.py  admin.py  apps.py  contexts.py  models.py  tests.py  urls.py  views.py
src/pydjango/pymysql/media/pymysql/styles/: base.scss  index.scss
src/pydjango/pymysql/migrations/: 0001_initial.py  __init__.py
src/pydjango/pymysql/static/pymysql/styles/: base.css  index.css
src/pydjango/pymysql/templates/: base.html  index.html
src/pydjango/pymysql/templates/pymysql/: employee.html  employees.html  index.html
src/pydjango/templates/: nav.html
src/tutorials/learn_python_org/: README.md  _10_classes_objects.py  _11_dictionaries.py  _13_numpy_arrays.py  _15_generators.py  _20_exception_handling.py  _22_serialization.py  _27_map_filter_reduce.py  _8_loops.py  _9_functions.py
src/tutorials/learnpython.org/: _4_basic_operators.py
src/tutorials/pynative/_1_basics/: __init__.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
tests/: helpers.py
tests/mysql/: __init__.py  test_query.py
