[tool.poetry]
name = "python-learning"
version = "0.1.0"
description = "Project to learn Python."
authors = ["MenSeb <sebastien.menard.github@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.0.285"
numpy = "^1.25.2"
pandas = "^2.0.3"
coverage = "^7.3.0"
sphinx = "^7.2.3"
pytest = "^7.4.0"
nox = "^2023.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
