[tool.poetry]
name = "python-learning"
version = "0.1.0"
description = "Project to learn Python."
authors = ["MenSeb <sebastien.menard.github@gmail.com>"]
maintainers = [
    "MenSeb <sebastien.menard.github@gmail.com>",
]
repository = "https://github.com/MenSeb/python-learning"
homepage = ""
documentation = ""
license = "ISC"
readme = ["README.md", "LICENSE"]
keywords = ["python", "learning"]
packages = [{ include = "mysql", from = "src" }]
include = [{ path = "tests", format = "sdist" }]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
fail_under = 100

[tool.coverage.html]
directory = 'coverage'


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
nox = "^2023.4.22"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.3"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"


[tool.poetry.group.data.dependencies]
pandas = "^2.0.3"
numpy = "^1.25.2"


[tool.poetry.group.type.dependencies]
mypy = "^1.5.1"


[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "^8.1.0"


